# geometry-1HGGD1

./: CMakeLists.txt  GeometryaMOIA.cpp  makefile
lib/: Library.cpp  Library.h
